# University-IT

./: CMakeLists.txt
Lab1/: CMakeLists.txt
Lab1/task1/: CMakeLists.txt  task1.c
Lab1/task2/: CMakeLists.txt  task2.c
Lab1/task3/: CMakeLists.txt  task3.c
Lab1/task4/: CMakeLists.txt  task4.c
Lab1/task5/: CMakeLists.txt  task5_func.c  task5_main.c
Lab1/task6/: CMakeLists.txt  task6_func.c  task6_main.c
Lab1/task7/: CMakeLists.txt  func.h  task7_func.c  task7_main.c
Lab1/task8/task8_lib/: func.h  task7_func.c  task8_lib.cbp  task8_lib.depend  task8_lib.layout
Lab1/task8/task8_main/: task7_main.c  task8_main.cbp  task8_main.depend  task8_main.layout
Lab2/: CMakeLists.txt  main.c  task1.c  task2.c
Lab3/: CMakeLists.txt
Lab3/task1_for/: CMakeLists.txt  func.h  mainfor.c  task1.c  task1_for.cbp  task1_for.depend  task1_for.layout  task2.c  task3.c  task4.c  task5.c
Lab3/task1_for/task3_for/: task3_for.cbp
Lab3/task2_while/: CMakeLists.txt  mainwhile.c  task1.c  task2.c  task2_while.cbp  task2_while.depend  task2_while.layout  task3.c  task4.c  task5.c
Lab3/task3_dowhile/: CMakeLists.txt  maindowhile.c  task1.c  task2.c  task3.c  task3_dowhile.cbp  task3_dowhile.depend  task3_dowhile.layout  task4.c  task5.c
Lab4/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c
Lab4/task6/: CMakeLists.txt  func.h  main.c  task1.c  task2.c  task3.c  task4.c  task5.c  task6.cbp
Lab4/task6/task6/: task6.cbp  task6.depend  task6.layout
Lab5/: CMakeLists.txt  task1.c  task2.c
Lab5/task3/: CMakeLists.txt  task3.c  task3.cbp  task3.depend  task3.layout
Lab5/task4/: CMakeLists.txt  task4.c  task4.cbp  task4.depend  task4.layout
Lab5/task5/: CMakeLists.txt  task5.c  task5.cbp  task5.depend  task5.layout
Lab5/task6/: CMakeLists.txt  task6.c  task6.cbp  task6.depend  task6.layout
Lab6/: CMakeLists.txt
Lab6/task1/: CMakeLists.txt  task1.c  task1.depend  task1.layout
Lab7/: CMakeLists.txt
Lab7/task1/: CMakeLists.txt  task1.c  task1.cbp  task1.depend  task1.layout
Lab7/task2/: CMakeLists.txt  task2.c  task2.cbp  task2.depend  task2.layout
Lab7/task3/: CMakeLists.txt  task3.c  task3.layout
Lab7/task4/: CMakeLists.txt  task4.c  task4.cbp  task4.depend  task4.layout
Lab7/task5/: CMakeLists.txt  task5.c  task5.cbp  task5.depend  task5.layout
Lab7/task6/: CMakeLists.txt  task6.c  task6.cbp  task6.depend  task6.layout
Lab7/task7/: CMakeLists.txt  task7.c  task7.cbp  task7.layout
