# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.0.0)

add_subdirectory ("Lab1")
add_subdirectory ("Lab2")
add_subdirectory ("Lab3")
add_subdirectory ("Lab4")
add_subdirectory ("Lab5")
add_subdirectory ("Lab6")
add_subdirectory ("Lab7")