# CMakeList.txt: файл проекта CMake верхнего уровн€; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.0.0)

project ("Lab1")

# ¬ключите подпроекты.
add_subdirectory ("task1")
add_subdirectory ("task2")
add_subdirectory ("task3")
add_subdirectory ("task4")
add_subdirectory ("task5")
add_subdirectory ("task6")
add_subdirectory ("task7")
#add_subdirectory ("task8")