# CMakeList.txt: ïğîåêò CMake äëÿ Lab1; âêëş÷èòå èñõîäíûé êîä è îïğåäåëåíèÿ,
# óêàæèòå çäåñü ëîãèêó äëÿ êîíêğåòíîãî ïğîåêòà.
#
cmake_minimum_required (VERSION 3.0.0)

project ("Lab3")

# Äîáàâüòå èñòî÷íèê â èñïîëíÿåìûé ôàéë ıòîãî ïğîåêòà.
add_executable (task2_while mainwhile.c task1.c task2.c task3.c task4.c task5.c)

# TODO: Äîáàâüòå òåñòû è öåëåâûå îáúåêòû, åñëè ıòî íåîáõîäèìî.
