# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.0.0)

add_executable (task6 main.c)
add_executable (task6 task1.c)
add_executable (task6 task2.c)
add_executable (task6 task3.c)
add_executable (task6 task4.c)
add_executable (task6 task5.c)