# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.0.0)

add_executable (Lab4_task60 main.c)
add_executable (Lab4_task61 task1.c)
add_executable (Lab4_task62 task2.c)
add_executable (Lab4_task63 task3.c)
add_executable (Lab4_task64 task4.c)
add_executable (Lab4_task65 task5.c)